Updated Telugu translation done by Krishna Babu K <kkrothap@redhat.com>.
2008-01-16  Sunil Mohan Adapa  <sunil@atc.tcs.com>

        * te.po: Updated Telugu translation done by
        Krishna Babu K <kkrothap@redhat.com>.


svn path=/branches/gnome-2-20/; revision=13614

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-16  Sunil Mohan Adapa  <sunil@atc.tcs.com>
+
+	* te.po: Updated Telugu translation done by
+	Krishna Babu K <kkrothap@redhat.com>.
+
 2007-12-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
 	* pt_BR.po: Translation of "delete" fixed by Rodrigo Flores.
