--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-17  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated
+
 2008-01-16  Sunil Mohan Adapa  <sunil@atc.tcs.com>
 
 	* te.po: Updated Telugu translation done by 
