--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,29 @@
+2008-01-17  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file.[ch]:
+        * libnautilus-private/nautilus-file-attributes.h:
+        * libnautilus-private/nautilus-file-private.h:
+	Add GMount attribute to NautilusFile.
+	(not implemented yet)
+	
+        * Makefile.am:
+        * configure.in:
+        * data/nautilus.xml.in:
+        * libnautilus-private/apps_nautilus_preferences.schemas.in:
+        * libnautilus-private/nautilus-autorun.[ch]:
+        * libnautilus-private/nautilus-global-preferences.c:
+        * libnautilus-private/nautilus-global-preferences.h:
+        * libnautilus-private/nautilus-program-choosing.c:
+        * src/Makefile.am:
+        * src/file-manager/fm-directory-view.c:
+        * src/nautilus-application.c:
+        * src/nautilus-autorun-software.c: Added.
+        * src/nautilus-file-management-properties.c:
+        * src/nautilus-file-management-properties.glade:
+        * src/nautilus-window-manage-views.c:
+        * src/nautilus-x-content-bar.[ch]: Added.
+	More work on autorun and x-content types from David Zeuthen
+
 2008-01-16  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-application.c:
