Implement reading the mount attribute (not used or tested yet)
2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-file.c:
	Implement reading the mount attribute
	(not used or tested yet)


svn path=/trunk/; revision=13617

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-01-17  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-desktop-icon-file.c:
+        * libnautilus-private/nautilus-directory-async.c:
+        * libnautilus-private/nautilus-directory-private.h:
+        * libnautilus-private/nautilus-file.c:
+	Implement reading the mount attribute
+	(not used or tested yet)
+
+2008-01-17  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file.[ch]:
         * libnautilus-private/nautilus-file-attributes.h:
         * libnautilus-private/nautilus-file-private.h:
