--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-18  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-x-content-bar.c:
+	Don't free result of g_app_info_get_icon ().
+
 2008-01-17  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-desktop-icon-file.c:
