Fix coding style
2008-01-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-autorun.c:
        * src/nautilus-autorun-software.c:
	Fix coding style


svn path=/trunk/; revision=13621

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-01-18  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-autorun.c:
+        * src/nautilus-autorun-software.c:
+	Fix coding style
+
+2008-01-18  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-program-choosing.c:
 	Just use get_activation_location instead of all
 	the unnecessary special casing.
