--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-18  Gil Forcada  <gforcada@svn.gnome.org>
+
+	* tr.po: Updated Turkish translation to pass msgfmt -cv.
+
 2008-01-17  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated
