--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-19  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Fixed wrong translations.
+
 2008-01-16  Sunil Mohan Adapa  <sunil@atc.tcs.com>
 
 	* te.po: Updated Telugu translation done by
