Updated Spanish translation
svn path=/trunk/; revision=13624

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-01-18  Gil Forcada  <gforcada@svn.gnome.org>
 
 	* tr.po: Updated Turkish translation to pass msgfmt -cv.
