Fix up indentation
2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
	Fix up indentation
	
        * libnautilus-private/nautilus-file.c:
	Allow umount and eject for NautilusFiles that have
	a GMount. (e.g. unix mountpoints)



svn path=/trunk/; revision=13626

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-01-21  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-desktop-icon-file.c:
+	Fix up indentation
+	
+        * libnautilus-private/nautilus-file.c:
+	Allow umount and eject for NautilusFiles that have
+	a GMount. (e.g. unix mountpoints)
+
 2008-01-18  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-autorun.c:
