--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-21  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2008-01-20  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
