Update for release
2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Bump glib requirement to 2.15.3


svn path=/trunk/; revision=13628

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-21  Alexander Larsson  <alexl@redhat.com>
+
+        * POTFILES.in:
+        * POTFILES.skip:
+	Add new files
+
 2008-01-21  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
