Update for release
2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Bump glib requirement to 2.15.3



svn path=/trunk/; revision=13629

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-01-21  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Bump glib requirement to 2.15.3
+
+2008-01-21  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-desktop-icon-file.c:
 	Fix up indentation
 	
