--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.21.6 are:
+* Regenerate thumbnails when files change
+* Fix crashes
+* New autorun and automount support
+* Allow unmount of current location if its a mountpoint
+
 Major changes in 2.21.5 are:
 * Add autorun/automount feature
 * Better handling of sensitivity of delete menu items
