updated hebrew translation
svn path=/trunk/; revision=13632

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-22  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 === nautilus 2.21.6 ===
 
 2008-01-21  Alexander Larsson  <alexl@redhat.com>
