--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-01-22  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-file.c:
+        * libnautilus-private/nautilus-progress-info.c:
+        * src/file-manager/fm-directory-view.c:
+        * src/file-manager/fm-properties-window.c:
+	Use thousands separators (#41455)
+
 2008-01-21  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
