Clean up strings for l10n. (#510327)
2008-01-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/apps_nautilus_preferences.schemas.in:
        * libnautilus-private/nautilus-file-operations.c:
        * src/Nautilus_shell.server.in:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
        * src/nautilus-connect-server-dialog-main.c:
        * src/nautilus-file-management-properties.glade:
        * src/nautilus-navigation-window-menus.c:
	Clean up strings for l10n. (#510327)


svn path=/trunk/; revision=13635

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2008-01-22  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/apps_nautilus_preferences.schemas.in:
+        * libnautilus-private/nautilus-file-operations.c:
+        * src/Nautilus_shell.server.in:
+        * src/file-manager/fm-directory-view.c:
+        * src/file-manager/fm-properties-window.c:
+        * src/nautilus-connect-server-dialog-main.c:
+        * src/nautilus-file-management-properties.glade:
+        * src/nautilus-navigation-window-menus.c:
+	Clean up strings for l10n. (#510327)
+
+2008-01-22  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.c:
         * libnautilus-private/nautilus-file.c:
         * libnautilus-private/nautilus-progress-info.c:
