Add quark-bases string-attribute accessors. Store extension infos as
2008-01-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
	Add quark-bases string-attribute accessors.
	Store extension infos as quarks


svn path=/trunk/; revision=13641

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-01-22  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file.[ch]:
+	Add quark-bases string-attribute accessors.
+	Store extension infos as quarks
+
+2008-01-22  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file.c:
         (nautilus_file_invalidate_extension_info_internal):
         (nautilus_file_add_string_attribute):
