sv.po: Updated Swedish translation
svn path=/trunk/; revision=13645

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-24  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2008-01-23  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
