Return FALSE from GIOSchedulerJobFuncs
svn path=/trunk/; revision=13647

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c: Update all
+	GIOSchedulerJobFunc callbacks to return FALSE.
+
 2008-01-24  Luca Ferretti  <elle.uca@libero.it>
 
 	reviewed by: Alexander Larsson
