--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-25  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2008-01-24  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
