--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-25  Soren Sandmann  <sandmann@redhat.com>
+
+	* libnautilus-private/nautilus-directory-background.c
+	(nautilus_connect_desktop_background_to_file_metadata): Remove
+	call of noop eel_background_set_is_constant()
+
 2008-01-25  Matthias Clasen  <mclasen@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations.c: Update all
