--- a/po/mk.po
+++ b/po/mk.po
@@ -43,7 +43,7 @@ msgstr "Преминување"
 
 #: ../data/browser.xml.h:2
 msgid "Azul"
-msgstr "Азул"
+msgstr "Azul"
 
 #: ../data/browser.xml.h:3
 msgid "Black"
