2008-01-27 Jovan Naumovski <jovanna@svn.gnome.org> *mk.po: Updated Macedonian translation.
svn path=/trunk/; revision=13654

--- a/po/mk.po
+++ b/po/mk.po
@@ -43,7 +43,7 @@ msgstr "Преминување"
 
 #: ../data/browser.xml.h:2
 msgid "Azul"
-msgstr "Azul"
+msgstr "Азул"
 
 #: ../data/browser.xml.h:3
 msgid "Black"
