--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-27  Jovan Naumovski  <jovan@lugola.net>
+
+	* mk.po: Updated Macedonian translation.
+
 2008-01-26  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po: Updated Hebrew translation.
