Enable paste into folder for volume links (#386800) Based on patch from
2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
	Enable paste into folder for volume links (#386800)
	Based on patch from John Millikin



svn path=/trunk/; revision=13659

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-01-28  Alexander Larsson  <alexl@redhat.com>
 
+        * src/file-manager/fm-directory-view.c:
+	Enable paste into folder for volume links (#386800)
+	Based on patch from John Millikin
+
+2008-01-28  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-directory-async.c:
         (thumbnail_done):
 	Don't reference thumb_mtime_str if its not
