Remove unused variables so we build cleanly in jhbuild.
2008-01-28  Colin Walters  <walters@redhat.com>

	* src/nautilus-location-entry.c: Remove unused variables so we build
	cleanly in jhbuild.


svn path=/branches/gnome-2-20/; revision=13663

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-28  Colin Walters  <walters@redhat.com>
+
+	* src/nautilus-location-entry.c: Remove unused variables so we build
+	cleanly in jhbuild.
+
 2008-01-09  Rajan Singh<singh.rajan@wipro.com>
 
 	Make try_to_expand_path() asychronous. Fixes #455908.
