Update for release
2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Update version to 2.21.90


svn path=/trunk/; revision=13664

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Major changes in 2.21.90 are:
+* Use thousand separators in all numbers (if used by locale)
+* Fix leaks
+* Performance improvements
+* Update to latest glib APIs
+* Fix bug that lost metadata from older versions
+* Fix crashes
+* Enable paste into folder for desktop icons
+* Better finding of autorun files on case sensitive media
+
 Major changes in 2.21.6 are:
 * Regenerate thumbnails when files change
 * Fix crashes
