--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-01-28  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.21.90 ===
+
+2008-01-28  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
