--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-28  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 === nautilus 2.21.90 ===
 
 2008-01-28  Luca Ferretti  <elle.uca@libero.it>
