--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-29  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c (report_link_progress):
+	Fix string wrt plural
+
 2008-01-28  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
