--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-29  Jonh Wendell  <jwendell@gnome.org>
+
+	* pt_BR.po: Brazilian Portuguese translation updated by Vladimir Melo.
+
 2008-01-28  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
