--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-29  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation   
+
 2008-01-29  Jonh Wendell  <jwendell@gnome.org>
 
 	* pt_BR.po: Brazilian Portuguese translation updated by Vladimir Melo.
