sv.po: Updated Swedish translation
svn path=/trunk/; revision=13672

--- a/po/sv.po
+++ b/po/sv.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-01-28 23:42+0100\n"
-"PO-Revision-Date: 2008-01-28 23:42+0100\n"
+"POT-Creation-Date: 2008-01-29 20:21+0100\n"
+"PO-Revision-Date: 2008-01-29 20:22+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -1843,9 +1843,9 @@ msgstr "Skapar länkar i \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:4077
 #, c-format
-msgid "Making links to %'d file"
+msgid "Making link to %'d file"
 msgid_plural "Making links to %'d files"
-msgstr[0] "Skapar länkar till %'d fil"
+msgstr[0] "Skapar länk till %'d fil"
 msgstr[1] "Skapar länkar till %'d filer"
 
 #: ../libnautilus-private/nautilus-file-operations.c:4151
@@ -2505,7 +2505,7 @@ msgstr "Okänd"
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:630
 #, c-format
 msgid "Select an application to open %s and other files of type \"%s\""
-msgstr "sdf"
+msgstr "Välj ett program att öppna %s med och andra filer av typen \"%s\""
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:162
 msgid "Could not run application"
