--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-31  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Khaled Hosny.
+
 2008-01-30  Funda Wang  <fundawang@gmail.com>
 
 	* zh_CN.po: Update Simplified Chinese translation.
