--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-01  Runa Bhattacharjee <runabh@gmail.com>
+
+	* kn.po: Updated Kannada Translations by Shankar Prasad.
+
 2008-01-31  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
