Handle GAppInfos having NULL id
2008-02-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.c:
	Handle GAppInfos having NULL id



svn path=/trunk/; revision=13679

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-01  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-mime-actions.c:
+	Handle GAppInfos having NULL id
+
 2008-01-30  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-autorun.[ch]:
