Updated Occitan translation
svn path=/trunk/; revision=13681

--- a/po/oc.po
+++ b/po/oc.po
@@ -1469,30 +1469,30 @@ msgstr "_Tot fusionar"
 #, c-format
 msgid "%'d second"
 msgid_plural "%'d seconds"
-msgstr[0] "%d segonda"
-msgstr[1] ""
+msgstr[0] "%'d segonda"
+msgstr[1] "%'d segondas"
 
 #: ../libnautilus-private/nautilus-file-operations.c:214
 #: ../libnautilus-private/nautilus-file-operations.c:225
 #, c-format
 msgid "%'d minute"
 msgid_plural "%'d minutes"
-msgstr[0] "%d minuta"
-msgstr[1] ""
+msgstr[0] "%'d minuta"
+msgstr[1] "%'d minutas"
 
 #: ../libnautilus-private/nautilus-file-operations.c:224
 #, c-format
 msgid "%'d hour"
 msgid_plural "%'d hours"
-msgstr[0] "%d ora"
-msgstr[1] ""
+msgstr[0] "%'d ora"
+msgstr[1] "%'d oras"
 
 #: ../libnautilus-private/nautilus-file-operations.c:232
 #, c-format
 msgid "approximately %'d hour"
 msgid_plural "approximately %'d hours"
-msgstr[0] "a l'entorn de %d ora"
-msgstr[1] ""
+msgstr[0] "a l'entorn de %'d ora"
+msgstr[1] "a l'entorn de %'d oras"
 
 #. appended to new link file
 #. Note to localizers: convert file type string for file
@@ -1734,8 +1734,8 @@ msgstr "Desplaçament de fichièrs dins l'escobilièr"
 #, c-format
 msgid "%'d file left to trash"
 msgid_plural "%'d files left to trash"
-msgstr[0] "Desplaçament de fichièrs dins l'escobilièr"
-msgstr[1] ""
+msgstr[0] "Demòra %'d fichièr dins l'escobilièr"
+msgstr[1] "Demòra %'d fichièrs dins l'escobilièr"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1516
 msgid "Cannot move file to trash, do you want to delete immediately?"
@@ -1783,29 +1783,29 @@ msgstr "Impossible de montar %s"
 #, c-format
 msgid "Preparing to copy %'d file (%S)"
 msgid_plural "Preparing to copy %'d files (%S)"
-msgstr[0] "Preparacion de la còpia de %d fichièrs (%S)"
-msgstr[1] ""
+msgstr[0] "Preparacion de la còpia de %'d fichièr (%S)"
+msgstr[1] "Preparacion de la còpia de %'d fichièrs (%S)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2013
 #, c-format
 msgid "Preparing to move %'d file (%S)"
 msgid_plural "Preparing to move %'d files (%S)"
-msgstr[0] "Preparacion del desplaçament de %d fichièrs (%S)"
-msgstr[1] ""
+msgstr[0] "Preparacion del desplaçament de %'d fichièr (%S)"
+msgstr[1] "Preparacion del desplaçament de %'d fichièrs (%S)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2019
 #, c-format
 msgid "Preparing to delete %'d file (%S)"
 msgid_plural "Preparing to delete %'d files (%S)"
-msgstr[0] "Preparacion de la supression de %d fichièrs (%S)"
-msgstr[1] ""
+msgstr[0] "Preparacion de la supression de %'d fichièr (%S)"
+msgstr[1] "Preparacion de la supression de %'d fichièrs (%S)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2025
 #, c-format
 msgid "Preparing to trash %'d file"
 msgid_plural "Preparing to trash %'d files"
-msgstr[0] "Preparacion del desplaçament de %d fichièrs dins la banasta"
-msgstr[1] ""
+msgstr[0] "Preparacion del desplaçament de %'d fichièr dins la banasta"
+msgstr[1] "Preparacion del desplaçament de %'d fichièrs dins la banasta"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2056
 #: ../libnautilus-private/nautilus-file-operations.c:2781
@@ -1902,39 +1902,39 @@ msgstr "Duplicacion de \"%B\""
 #: ../libnautilus-private/nautilus-file-operations.c:2496
 msgid "Moving %'d file (in \"%B\") to \"%B\""
 msgid_plural "Moving %'d files (in \"%B\") to \"%B\""
-msgstr[0] "Còpia de %d fichièr dins \"%B\""
-msgstr[1] ""
+msgstr[0] "Desplaçament de %'d fichièr (dins \"%B\") cap a \"%B\""
+msgstr[1] "Desplaçament de %'d fichièrs (dins \"%B\") cap a \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2500
 msgid "Copying %'d file (in \"%B\") to \"%B\""
 msgid_plural "Copying %'d files (in \"%B\") to \"%B\""
-msgstr[0] "Còpia de %d fichièr dins \"%B\""
-msgstr[1] ""
+msgstr[0] "Còpia de %'d fichièr (dins \"%B\") cap a \"%B\""
+msgstr[1] "Còpia de %'d fichièr (dins \"%B\") cap a \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2508
 msgid "Duplicating %'d file (in \"%B\")"
 msgid_plural "Duplicating %'d files (in \"%B\")"
-msgstr[0] "Duplicacion de %d fichièr"
-msgstr[1] ""
+msgstr[0] "Duplicacion de %'d fichièr (dins \"%B\")"
+msgstr[1] "Duplicacion de %'d fichièrs (dins \"%B\")"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2518
 msgid "Moving %'d file to \"%B\""
 msgid_plural "Moving %'d files to \"%B\""
-msgstr[0] "Còpia de %d fichièr dins \"%B\""
-msgstr[1] ""
+msgstr[0] "Còpia de %'d fichièr dins \"%B\""
+msgstr[1] "Còpia de %'d fichièrs dins \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2522
 msgid "Copying %'d file to \"%B\""
 msgid_plural "Copying %'d files to \"%B\""
-msgstr[0] "Còpia de %d fichièr dins \"%B\""
-msgstr[1] ""
+msgstr[0] "Còpia de %'d fichièr dins \"%B\""
+msgstr[1] "Còpia de %'d fichièr dins \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2528
 #, c-format
 msgid "Duplicating %'d file"
 msgid_plural "Duplicating %'d files"
-msgstr[0] "Duplicacion de %d fichièr"
-msgstr[1] ""
+msgstr[0] "Duplicacion de %'d fichièr"
+msgstr[1] "Duplicacion de %'d fichièrs"
 
 #. To translators: %S will expand to a size like "2 bytes" or "3 MB", so something like "4 kb of 4 MB"
 #: ../libnautilus-private/nautilus-file-operations.c:2547
@@ -2065,8 +2065,8 @@ msgstr "Preparacion del desplaçament dins \"%B\""
 #, c-format
 msgid "Preparing to move %'d file"
 msgid_plural "Preparing to move %'d files"
-msgstr[0] "Preparacion del desplaçament de %d fichièrs (%S)"
-msgstr[1] ""
+msgstr[0] "Preparacion del desplaçament de %'d fichièr"
+msgstr[1] "Preparacion del desplaçament de %'d fichièrs"
 
 #: ../libnautilus-private/nautilus-file-operations.c:3703
 msgid ""
@@ -2088,7 +2088,7 @@ msgstr ""
 #, c-format
 msgid "Making link to %'d file"
 msgid_plural "Making links to %'d files"
-msgstr[0] "Preparacion del desplaçament de %d fichièrs dins la banasta"
+msgstr[0] ""
 msgstr[1] ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:4151
@@ -2334,22 +2334,22 @@ msgstr "Lo grop '%s' especificat existís pas"
 #, c-format
 msgid "%'u item"
 msgid_plural "%'u items"
-msgstr[0] "%u element"
-msgstr[1] ""
+msgstr[0] "%'u element"
+msgstr[1] "%'u elements"
 
 #: ../libnautilus-private/nautilus-file.c:4885
 #, c-format
 msgid "%'u folder"
 msgid_plural "%'u folders"
-msgstr[0] "%u repertòri"
-msgstr[1] ""
+msgstr[0] "%'u repertòri"
+msgstr[1] "%'u repertòris"
 
 #: ../libnautilus-private/nautilus-file.c:4886
 #, c-format
 msgid "%'u file"
 msgid_plural "%'u files"
-msgstr[0] "%u fichièr"
-msgstr[1] "%u fichièrs"
+msgstr[0] "%'u fichièr"
+msgstr[1] "%'u fichièrs"
 
 #. Do this in a separate stage so that we don't have to put G_GUINT64_FORMAT in the translated string
 #: ../libnautilus-private/nautilus-file.c:4965
@@ -3078,8 +3078,8 @@ msgstr "Visualizar aqueste emplaçament amb la visualizacion en burèu."
 #, c-format
 msgid "This will open %'d separate window."
 msgid_plural "This will open %'d separate windows."
-msgstr[0] "Dobrirà %d fenèstra."
-msgstr[1] ""
+msgstr[0] "Dobrirà %'d fenèstra."
+msgstr[1] "Dobrirà %'d fenèstras."
 
 #: ../src/file-manager/fm-directory-view.c:1062
 #: ../src/file-manager/fm-properties-window.c:4678
@@ -3121,38 +3121,38 @@ msgstr "\"%s\" seleccionat"
 #, c-format
 msgid "%'d folder selected"
 msgid_plural "%'d folders selected"
-msgstr[0] "%d repertòri seleccionat"
-msgstr[1] ""
+msgstr[0] "%'d repertòri seleccionat"
+msgstr[1] "%'d repertòris seleccionats"
 
 #: ../src/file-manager/fm-directory-view.c:2043
 #, c-format
 msgid " (containing %'d item)"
 msgid_plural " (containing %'d items)"
-msgstr[0] "( que conten %d element)"
-msgstr[1] "( que conten %d elements)"
+msgstr[0] "( que conten %'d element)"
+msgstr[1] "( que conten %'d elements)"
 
 #. translators: this is preceded with a string of form 'N folders' (N more than 1)
 #: ../src/file-manager/fm-directory-view.c:2054
 #, c-format
 msgid " (containing a total of %'d item)"
 msgid_plural " (containing a total of %'d items)"
-msgstr[0] "( que conten un total de %d element)"
-msgstr[1] "( que conten un total de %d elements)"
+msgstr[0] "( que conten un total de %'d element)"
+msgstr[1] "( que conten un total de %'d elements)"
 
 #: ../src/file-manager/fm-directory-view.c:2071
 #, c-format
 msgid "%'d item selected"
 msgid_plural "%'d items selected"
-msgstr[0] "%d element seleccionat"
-msgstr[1] ""
+msgstr[0] "%'d element seleccionat"
+msgstr[1] "%'d elements seleccionats"
 
 #. Folders selected also, use "other" terminology
 #: ../src/file-manager/fm-directory-view.c:2078
 #, c-format
 msgid "%'d other item selected"
 msgid_plural "%'d other items selected"
-msgstr[0] "%d autre element seleccionat"
-msgstr[1] ""
+msgstr[0] "%'d autre element seleccionat"
+msgstr[1] "%'d autres elements seleccionats"
 
 #. This is marked for translation in case a localiser
 #. * needs to use something other than parentheses. The
@@ -3707,15 +3707,15 @@ msgstr "_Dobrir amb \"%s\""
 #, c-format
 msgid "Open in %'d New Window"
 msgid_plural "Open in %'d New Windows"
-msgstr[0] "Dobrir dins %d fenèstra novèla"
-msgstr[1] ""
+msgstr[0] "Dobrir dins %'d fenèstra novèla"
+msgstr[1] "Dobrir dins %'d fenèstras novèlas"
 
 #: ../src/file-manager/fm-directory-view.c:7111
 #, c-format
 msgid "Browse in %'d New Window"
 msgid_plural "Browse in %'d New Windows"
-msgstr[0] "Dobrir dins %d fenèstra novèla"
-msgstr[1] ""
+msgstr[0] "Dobrir dins %'d fenèstra novèla"
+msgstr[1] "Dobrir dins %'d fenèstras novèlas"
 
 #: ../src/file-manager/fm-directory-view.c:7145
 msgid "Delete all selected items permanently"
