--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,7 @@
-2008-02-02  Changwoo Ryu  <cwryu@debian.org>
+2008-02-02  Yannig Marchegay <yannig@marchegay.org>
+
+	* oc.po: Updated Occitan translation.
+2008-02-02  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
 
